--- a/ejercicio_practica_1/index.html
+++ b/ejercicio_practica_1/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <title>Experiencia</title>
 </head>
 <body>
@@ -24,11 +25,13 @@
   </section>
 
   <footer>
+    <nav>
     <ul>
-      <li><img src="images/youtube.png" alt="yutube"></li>
-      <li><img src="images/instagram.png" alt="instagram"></li>
+      <li><img src="images/instagram.png" alt="instagram" height="60px"></a></li>
+      <li><img src="images/youtube.png" alt="youtube" height="60px"></a></li>
+      <span></span>
     </ul>
-  </footer>    
-
+    </nav>
+  </footer> 
 </body>
 </html>
